[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/popups.gd" type="Script" id=2]
[ext_resource path="res://scripts/settings.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Popups" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -360.0
margin_right = 280.0
margin_bottom = 360.0
rect_min_size = Vector2( 560, 720 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Settings/VBoxContainer"]
margin_right = 552.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
size_flags_vertical = 1
text = "Options"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 50.0
margin_right = 552.0
margin_bottom = 657.0
size_flags_vertical = 3

[node name="Music" type="CheckButton" parent="Settings/VBoxContainer/VBoxContainer"]
margin_right = 552.0
margin_bottom = 148.0
rect_min_size = Vector2( 240, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Music"

[node name="Sound" type="CheckButton" parent="Settings/VBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 552.0
margin_bottom = 300.0
rect_min_size = Vector2( 240, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Sound"

[node name="HowToPlay" type="Button" parent="Settings/VBoxContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 552.0
margin_bottom = 452.0
rect_min_size = Vector2( 240, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.0117647, 0.270588, 0.380392, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.270588, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 0.0117647, 0.270588, 0.380392, 1 )
enabled_focus_mode = 0
text = "How To Play"
align = 0

[node name="AboutButton" type="Button" parent="Settings/VBoxContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 552.0
margin_bottom = 607.0
rect_min_size = Vector2( 240, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.0117647, 0.270588, 0.380392, 1 )
custom_colors/font_color_hover = Color( 0.0117647, 0.270588, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 0.0117647, 0.270588, 0.380392, 1 )
enabled_focus_mode = 0
text = "About"
align = 0

[node name="OK" type="Button" parent="Settings/VBoxContainer"]
margin_left = 236.0
margin_top = 667.0
margin_right = 316.0
margin_bottom = 712.0
rect_min_size = Vector2( 80, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "OK"

[node name="About" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -352.0
margin_right = 280.0
margin_bottom = 352.0
rect_min_size = Vector2( 560, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="About"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="About/VBoxContainer"]
margin_right = 552.0
margin_bottom = 646.0
size_flags_vertical = 3

[node name="GameInfo" type="Label" parent="About/VBoxContainer/VBoxContainer"]
margin_right = 552.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 1
size_flags_horizontal = 7
size_flags_vertical = 0
text = "Brinths:
Unlimited Mazes 3D
Copyright © 2019 Yasser Baali
Made With Godot"
align = 1
valign = 1

[node name="Notice" type="Label" parent="About/VBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 552.0
margin_bottom = 138.0
mouse_filter = 1
text = "Notices:"

[node name="NoticeBody" type="RichTextLabel" parent="About/VBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 552.0
margin_bottom = 646.0
rect_min_size = Vector2( 0, 504 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[u]Godot Engine[/u]

Copyright (c) 2007-2019 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2019 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

----------------------------------------------

[u]FreeType[/u]

Portions of this software are copyright © 2018 The FreeType Project (www.freetype.org).
All rights reserved."
text = "Godot Engine

Copyright (c) 2007-2019 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2019 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

----------------------------------------------

FreeType

Portions of this software are copyright © 2018 The FreeType Project (www.freetype.org).
All rights reserved."

[node name="OK" type="Button" parent="About/VBoxContainer"]
margin_left = 236.0
margin_top = 656.0
margin_right = 316.0
margin_bottom = 696.0
rect_min_size = Vector2( 80, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "OK"

[node name="Tutorial" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -360.0
margin_right = 280.0
margin_bottom = 360.0
rect_min_size = Vector2( 560, 720 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial"]
margin_left = 4.0
margin_top = 4.0
margin_right = 556.0
margin_bottom = 716.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tutorial/VBoxContainer"]
margin_right = 552.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
text = "How To Play"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/VBoxContainer"]
margin_top = 50.0
margin_right = 552.0
margin_bottom = 662.0
rect_min_size = Vector2( 0, 120 )
size_flags_vertical = 3
custom_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="Tutorial/VBoxContainer/VBoxContainer"]
margin_right = 552.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tutorial/VBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 176.0
margin_top = 7.0
margin_right = 376.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Tap to move"
align = 1
valign = 1
autowrap = true

[node name="PanelContainer2" type="PanelContainer" parent="Tutorial/VBoxContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 552.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 1
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tutorial/VBoxContainer/VBoxContainer/PanelContainer2"]
margin_left = 176.0
margin_top = 7.0
margin_right = 376.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Swipe left / right to turn"
align = 1
valign = 1
autowrap = true

[node name="PanelContainer3" type="PanelContainer" parent="Tutorial/VBoxContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 552.0
margin_bottom = 612.0
rect_min_size = Vector2( 200, 50 )
mouse_filter = 1
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tutorial/VBoxContainer/VBoxContainer/PanelContainer3"]
margin_left = 176.0
margin_top = 7.0
margin_right = 376.0
margin_bottom = 191.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Swipe up / down to
reveal / hide map"
align = 1
valign = 1
autowrap = true

[node name="OK" type="Button" parent="Tutorial/VBoxContainer"]
margin_left = 236.0
margin_top = 672.0
margin_right = 316.0
margin_bottom = 712.0
rect_min_size = Vector2( 80, 40 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "OK"
[connection signal="pressed" from="Settings/VBoxContainer/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/OK" to="." method="_on_OK_pressed" binds= [ 0 ]]
[connection signal="pressed" from="About/VBoxContainer/OK" to="." method="_on_OK_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Tutorial/VBoxContainer/OK" to="." method="_on_OK_pressed" binds= [ 2 ]]
